fix alignments

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
   color: #444;
   background-color: #F9FAFB;
+  padding-top: 50px;
 }
 
 h5 {
@@ -14,7 +15,7 @@ h5 {
 .team-name {
   color: #555;
   display: block;
-  margin-top: 50px;
+  /* margin-top: 50px; */
   margin-left: 25px;
 }
 
@@ -25,11 +26,11 @@ h5 {
   margin-bottom: 20px;
   position: relative;
   padding-left: 40px;
-  height: 80px;
+  height: 53px;
 }
 .user-card .name {
   color: #555;
-  padding-top: 5%;
+  /* padding-top: 5%; */
 }
 
 .user-card .status {
@@ -58,6 +59,6 @@ h5 {
   }
   .dropdown {
     position: absolute;
-    top: 0;
+    top: 17%;
     right: 0;
   }
